--- a/playbooks/openstack/openshift-cluster/files/heat_stack.yaml
+++ b/playbooks/openstack/openshift-cluster/files/heat_stack.yaml
@@ -88,12 +88,6 @@ parameters:
     label: Infra flavor
     description: Flavor of the infra node servers
 
-  key_pair:
-    type: string
-    label: Key name
-    description: Name of the key
-
-
 outputs:
 
   master_names:
@@ -297,7 +291,7 @@ resources:
           type:       master
           image:      { get_param: master_image }
           flavor:     { get_param: master_flavor }
-          key_name:   { get_param: key_pair }
+          key_name:   { get_resource: keypair }
           net:        { get_resource: net }
           subnet:     { get_resource: subnet }
           secgrp:
@@ -329,7 +323,7 @@ resources:
           subtype:    compute
           image:      { get_param: node_image }
           flavor:     { get_param: node_flavor }
-          key_name:   { get_param: key_pair }
+          key_name:   { get_resource: keypair }
           net:        { get_resource: net }
           subnet:     { get_resource: subnet }
           secgrp:
@@ -361,7 +355,7 @@ resources:
           subtype:    infra
           image:      { get_param: infra_image }
           flavor:     { get_param: infra_flavor }
-          key_name:   { get_param: key_pair }
+          key_name:   { get_resource: keypair }
           net:        { get_resource: net }
           subnet:     { get_resource: subnet }
           secgrp:
