--- a/playbooks/byo/openshift-cluster/config.yml
+++ b/playbooks/byo/openshift-cluster/config.yml
@@ -6,5 +6,5 @@
     g_nodes_group: "{{ 'nodes' }}"
     g_lb_group: "{{ 'lb' }}"
     openshift_cluster_id: "{{ cluster_id | default('default') }}"
-    openshift_debug_level: 2
+    openshift_debug_level: "{{ lookup('oo_option', 'openshift_debug_level') | default('2', True) }}"
     openshift_deployment_type: "{{ deployment_type }}"
