--- a/roles/os_zabbix/vars/template_os_linux.yml
+++ b/roles/os_zabbix/vars/template_os_linux.yml
@@ -259,3 +259,18 @@ g_template_os_linux:
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_memory.asciidoc'
     priority: warn
     description: 'Alert on less than 30MegaBytes.  This is 30 Million Bytes.  30000 KB x 1024'
+
+    #  CPU Utilization #
+  - name: 'CPU idle less than 5% on {HOST.NAME}'
+    expression: '{Template OS Linux:kernel.all.cpu.idle.last()}<5 and {Template OS Linux:kernel.all.cpu.idle.last(#2)}<5'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_cpu_idle.asciidoc'
+    priority: high
+    description: 'CPU is less than 5% idle'
+
+  - name: 'CPU idle less than 10% on {HOST.NAME}'
+    expression: '{Template OS Linux:kernel.all.cpu.idle.last()}<10 and {Template OS Linux:kernel.all.cpu.idle.last(#2)}<10'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_cpu_idle.asciidoc'
+    priority: warn
+    description: 'CPU is less than 10% idle'
+    dependencies:
+    - 'CPU idle less than 5% on {HOST.NAME}'
