added 'missingok' to logrotate and disabled fluentd in online

--- a/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
@@ -172,6 +172,7 @@
             - rotate 7
             - compress
             - sharedscripts
+            - missingok
           scripts:
             postrotate: "/bin/kill -HUP `cat /var/run/syslogd.pid 2> /dev/null` 2> /dev/null || true"
 
