--- a/playbooks/gce/openshift-cluster/launch.yml
+++ b/playbooks/gce/openshift-cluster/launch.yml
@@ -28,33 +28,33 @@
       type: "{{ k8s_type }}"
       g_sub_host_type: "{{ sub_host_type }}"
 
-  - include: ../../common/openshift-cluster/set_infra_launch_facts_tasks.yml
-    vars:
-      type: "infra"
-      count: "{{ num_infra }}"
-  - include: tasks/launch_instances.yml
-    vars:
-      instances: "{{ infra_names }}"
-      cluster: "{{ cluster_id }}"
-      type: "{{ k8s_type }}"
-      g_sub_host_type: "{{ sub_host_type }}"
-
-  - set_fact:
-      a_infra: "{{ infra_names[0] }}"
-  - add_host: name={{ a_infra }} groups=service_master
-
+#  - include: ../../common/openshift-cluster/set_infra_launch_facts_tasks.yml
+#    vars:
+#      type: "infra"
+#      count: "{{ num_infra }}"
+#  - include: tasks/launch_instances.yml
+#    vars:
+#      instances: "{{ infra_names }}"
+#      cluster: "{{ cluster_id }}"
+#      type: "{{ k8s_type }}"
+#      g_sub_host_type: "{{ sub_host_type }}"
+#
+#  - set_fact:
+#      a_infra: "{{ infra_names[0] }}"
+#  - add_host: name={{ a_infra }} groups=service_master
+#
 - include: update.yml
-
-- name: Deploy OpenShift Services
-  hosts: service_master
-  connection: ssh
-  gather_facts: yes
-  roles:
-  - openshift_registry
-  - openshift_router
-
-- include: ../../common/openshift-cluster/create_services.yml
-  vars:
-     g_svc_master: "{{ service_master }}"
+#
+#- name: Deploy OpenShift Services
+#  hosts: service_master
+#  connection: ssh
+#  gather_facts: yes
+#  roles:
+#  - openshift_registry
+#  - openshift_router
+#
+#- include: ../../common/openshift-cluster/create_services.yml
+#  vars:
+#     g_svc_master: "{{ service_master }}"
 
 - include: list.yml
