--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install the base package for admin tooling
   action: "{{ ansible_pkg_mgr }} name={{ openshift.common.service_type }}{{ openshift_version  }} state=present"
-  when: not is_atomic
+  when: openshift.common.is_containerized | bool
 
 - name: Reload generated facts
   openshift_facts:
@@ -11,6 +11,11 @@
   file:
     path: "{{ openshift_master_config_dir }}"
     state: directory
+
+- name: Pull required docker image
+  command: >
+    docker pull {{ openshift.common.cli_image }}
+  when: openshift.common.is_containerized | bool
 
 - name: Create the master certificates if they do not already exist
   command: >
