--- a/roles/os_env_extras/tasks/main.yaml
+++ b/roles/os_env_extras/tasks/main.yaml
@@ -13,4 +13,4 @@
 
 - name: Bash Completion
   action: "{{ ansible_pkg_mgr }} name=bash-completion state=present"
-  when: not is_atomic
+  when: not openshift.common.is_containerized | bool
