--- a/playbooks/gce/openshift-cluster/vars.yml
+++ b/playbooks/gce/openshift-cluster/vars.yml
@@ -1,11 +1,8 @@
 ---
-do_we_use_openshift_sdn: true
-sdn_network_plugin: redhat/openshift-ovs-subnet 
-# os_sdn_network_plugin_name can be ovssubnet or multitenant, see https://docs.openshift.org/latest/architecture/additional_concepts/sdn.html#ovssubnet-plugin-operation
 deployment_vars:
   origin:
-    image: preinstalled-slave-50g-v5
-    ssh_user: root
+    image: centos-7
+    ssh_user:
     sudo: yes
   online:
     image: libra-rhel7
@@ -15,3 +12,4 @@ deployment_vars:
     image: rhel-7
     ssh_user:
     sudo: yes
+
