--- a/roles/dns_client/vars/main.yml
+++ b/roles/dns_client/vars/main.yml
@@ -1,5 +1,6 @@
 ---
-network_file: /etc/sysconfig/network-scripts/ifcfg-eth0
+# TODO eth0 is hardcoded here...
+network_conf_file: /etc/sysconfig/network-scripts/ifcfg-eth0
+dhclient_conf_file: /etc/dhcp/dhclient-eth0.conf
 dns_domain: "{{ lookup('env', 'CLOUD_DOMAIN')|default('example.com', true) }}"
-        # FIXME getting the DNS server IP address
-dns_server: "{{ hostvars['dns.example.com'].openshift.common.ip }}"
+dns_server: "{{ hostvars[groups.dns[0]].openshift.common.ip }}"
