--- a/playbooks/gce/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/gce/openshift-cluster/tasks/launch_instances.yml
@@ -32,11 +32,11 @@
     groups: "{{ item.tags | oo_prepend_strings_in_list('tag_') | join(',') }}"
     gce_public_ip: "{{ item.public_ip }}"
     gce_private_ip: "{{ item.private_ip }}"
-  with_items: gce.instance_data | default([])
+  with_items: gce.instance_data | default([], true)
 
 - name: Wait for ssh
   wait_for: port=22 host={{ item.name }}
-  with_items: gce.instance_data | default([])
+  with_items: gce.instance_data | default([], true)
 
 - name: Wait for user setup
   command: "ssh -o StrictHostKeyChecking=no -o PasswordAuthentication=no -o ConnectTimeout=10 -o UserKnownHostsFile=/dev/null {{ hostvars[item.name].ansible_ssh_user }}@{{ item.public_ip }} echo {{ hostvars[item.name].ansible_ssh_user }} user is setup"
@@ -44,4 +44,4 @@
   until: result.rc == 0
   retries: 30
   delay: 5
-  with_items: gce.instance_data | default([])
+  with_items: gce.instance_data | default([], true)
