--- a/playbooks/gce/openshift-cluster/launch.yml
+++ b/playbooks/gce/openshift-cluster/launch.yml
@@ -28,21 +28,22 @@
       type: "{{ k8s_type }}"
       g_sub_host_type: "{{ sub_host_type }}"
 
-#  - include: ../../common/openshift-cluster/set_infra_launch_facts_tasks.yml
-#    vars:
-#      type: "infra"
-#      count: "{{ num_infra }}"
-#  - include: tasks/launch_instances.yml
-#    vars:
-#      instances: "{{ infra_names }}"
-#      cluster: "{{ cluster_id }}"
-#      type: "{{ k8s_type }}"
-#      g_sub_host_type: "{{ sub_host_type }}"
-#
-#  - set_fact:
-#      a_infra: "{{ infra_names[0] }}"
-#  - add_host: name={{ a_infra }} groups=service_master
-#
+  - include: ../../common/openshift-cluster/set_node_launch_facts_tasks.yml
+    vars:
+      type: "infra"
+      count: "{{ num_infra }}"
+  - include: tasks/launch_instances.yml
+    vars:
+      instances: "{{ node_names }}"
+      cluster: "{{ cluster_id }}"
+      type: "{{ k8s_type }}"
+      g_sub_host_type: "{{ sub_host_type }}"
+
+  - add_host:
+      name: "{{ master_names.0 }}"
+      groups: service_master
+    when: master_names is defined and master_names.0 is defined
+
 - include: update.yml
 #
 #- name: Deploy OpenShift Services
