--- a/roles/os_zabbix/vars/template_openshift_node.yml
+++ b/roles/os_zabbix/vars/template_openshift_node.yml
@@ -20,6 +20,12 @@ g_template_openshift_node:
     applications:
     - Openshift Node
 
+  - key: openshift.node.etcd.status
+    description: Shows ping result for etcd
+    type: int
+    applications:
+    - Openshift Node
+
   ztriggers:
   - name: 'Openshift Node process not running on {HOST.NAME}'
     expression: '{Template Openshift Node:openshift.node.process.count.max(#3)}<1'
@@ -39,6 +45,11 @@ g_template_openshift_node:
   - name: 'Number of OVS ports is 0 on {HOST.NAME}'
     expression: '{Template Openshift Node:openshift.node.ovs.ports.count.last()}=0'
     url: 'https://github.com/openshift/ops-sop/blob/node/V3/Alerts/openshift_node.asciidoc'
+    priority: high
+
+  - name: 'Openshift etcd health status failed on {HOST.NAME}'
+    expression: '{Template Openshift Node:openshift.node.etcd.status.min(#3}>0'
+    url: 'https://github.com/openshift/ops-sop/blob/node/V3/Alerts/openshift_etcd.asciidoc'
     priority: high
 
 
