Removing the openshift facts

--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -96,6 +96,7 @@
 
     - file: path={{ item }} state=absent
       with_items:
+        - /etc/ansible/facts.d/openshift.fact
         - /etc/atomic-enterprise
         - /etc/etcd
         - /etc/openshift
